# AliasUpdater

./: .gitignore  integration.py  pyproject.toml
aliasupdater/: admin.py  io.py  login.py
tests/: test_login.py
