[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['aliasupdater']

[tool.setuptools.package-data]
heatri = ['data/*.json']

[project]
name = 'aliasupdater'
version = '0.1a'
description = '...'
readme = 'README.md'
requires-python = '>=3.12'
keywords = ['']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dependencies = ['arcgis>=2.4']

[project.urls]
'Homepage' = 'https://www.esri.de'
'GitHub' = 'https://github.com/EsriDE/AliasUpdater'